--- a/.github/workflows/tfy-deploy.yaml
+++ b/.github/workflows/tfy-deploy.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   TFY_HOST: https://rsndontree.truefoundry.cloud
-  TFY_APPLICATION_FQN: test-cluster2102:rt-ws:github-deployment
+  TFY_APPLICATION_FQN: test-cluster2102:rt-ws:test
   TFY_API_KEY: ${{ secrets.TFY_API_KEY }}
 
 jobs:
@@ -19,4 +19,4 @@ jobs:
         run: pip install servicefoundry
       - name: Deploy with patch
         run: |
-          sfy patch-application --application_fqn=test-cluster2102:rt-ws:github-deployment --patch='{"image": {"build_source": {"ref": "${{ github.sha }}"}}}'
+          sfy patch-application --application_fqn=test-cluster2102:rt-ws:test --patch='{"image": {"build_source": {"ref": "${{ github.sha }}"}}}'
