--- a/.github/workflows/vm_ssh.yaml
+++ b/.github/workflows/vm_ssh.yaml
@@ -20,4 +20,6 @@ jobs:
         ssh -o StrictHostKeyChecking=no -i private_key ec2-user@3.91.207.90 << 'EOF'
           ls
           pwd
+          mkdir test
+          
         EOF
