--- a/.github/workflows/vm_ssh.yaml
+++ b/.github/workflows/vm_ssh.yaml
@@ -18,8 +18,11 @@ jobs:
         echo "${SSH_PRIVATE_KEY}" > private_key
         chmod 600 private_key
         ssh -o StrictHostKeyChecking=no -i private_key ec2-user@3.91.207.90 << 'EOF'
+          echo "Running ls command"
           ls
+          echo "Running pwd command"
           pwd
-          mkdir test
-          
+          echo "Running uname -a command"
+          uname -a
         EOF
+
